# LazyExp

./: pyproject.toml  test.py
lazyexp/: __init__.py  _hooks.py  datapro.py  envdata.py  envloader.py  evaluator.py  exenv.py  exper.py  expui.py  lazyenv.py  lazyexp.py  llmeval.py  loader.py  mail.py  runners.py  scheduler.py  scheduler_tui.py  utils.py  vllmeval.py
tests/: test_data.py  test_envmv.py  test_runners.py  test_workflow.py
