[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyexp"
version = "0.2"
description = "Lazy Experiment"
authors = [{ name = "RickT", email = "227428973@qq.com" }]
requires-python = ">=3.12"


dependencies = [
    "rich",
    "matplotlib",
    "tqdm",
    "transformers",
    "datasets",
    "torch",
]

# 自动发现包 (通常不需要改，除非你的目录结构很特殊)
[tool.setuptools.packages.find]
where = ["."]